2015-12-13  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.dg/graphite/pr42729.c: XFAIL AIX.

2015-12-13  Jeff Law  <law@redhat.com>

	* gcc.target/m68k/pr19201.c: New test.

	* gcc.target/m68k/pr63347.c: Remove #include <stdlib> add -w to
	command line options.
	* gcc.target/m68k/20090709-1.c: Adjust expected output.

2015-12-12  David Edelsohn  <dje.gcc@gmail.com>

	* g++.dg/opt/pr48549.C: XFAIL AIX.
	* g++.dg/abi/anon1.C: XFAIL AIX.
	* gcc.dg/graphite/pr42917.c: XFAIL AIX.

2015-12-12  Tobias Burnus  <burnus@net-b.de>

	PR fortran/45859
	* gfortran.dg/coarray_args_2.f90: Remove dg-error.

2015-12-12  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.target/powerpc/pr67808.c: Add -mlong-double-128 option.
	* g++.dg/cpp1y/pr58708.C: Test appropriate value for size of
	wchar_t.

2015-12-12  Paolo Bonzini  <bonzini@gnu.org>

	PR sanitizer/68418
	* gcc.dg/ubsan/c99-wrapv-shift-1.c,
	gcc.dg/ubsan/c99-wrapv-shift-2.c: New testcases.

2015-12-11  Jeff Law  <law@redhat.com>

	PR tree-optimization/68844
	* gcc.dg/tree-ssa/ssa-dom-thread-4.c: Update expected output.

2015-12-11  Nathan Sidwell  <nathan@acm.org>

	* gcc.dg/pr59605-1.c: Reduce iterations for nvptx.

2015-12-11  Jan Beulich  <jbeulich@suse.com>

	* gcc.c-torture/execute/stkalign.c: New.

2015-12-11  Tsvetkova Alexandra  <aleksandra.tsvetkova@intel.com>

	* gcc.target/i386/mpx/memmove-1.c: New test.
	* gcc.target/i386/mpx/memmove-2.c: New test.

2015-12-11  Nathan Sidwell  <nathan@acm.org>

	* gcc.target/nvptx/ary-init.c: Repair dg_final syntax.
	* gcc.target/nvptx/decl-init.c: Likewise.  Add TI case.

2015-12-11  Martin Jambor  <mjambor@suse.cz>

	PR ipa/68064
	* g++.dg/torture/pr68064.C: New test.

2015-12-11  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/md/setmem_long-1.c: New test.

2015-12-11  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/md/movstr-1.c: New test.
	* gcc.target/s390/s390.exp: Add subdir md.
	Do not run hotpatch tests twice.
